--- a/Crawler_Java/src/src/main/resources/application.properties
+++ b/Crawler_Java/src/src/main/resources/application.properties
@@ -20,8 +20,8 @@ run_python_path=/opt/apache-tomcat-9.0.87/runSpiderFile.py
 #Email Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=thiensutoiloi3@gmail.com
-spring.mail.password=jyhgzfizxcwrncuj
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
